# precis-digital-interview-task

event-creator/: Cargo.toml
event-creator/src/: main.rs
event-reader/: Cargo.toml
event-reader/src/: main.rs
