[package]
name = "event-creator"
version = "0.1.1"
edition = "2024"


[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
rand = "0.8"
google-cloud-pubsub = "0.30.0"
google-cloud-default = "0.4.0"
google-cloud-auth = "0.19.0"
google-cloud-googleapis = "0.16.1"
