[package]
name = "event-reader"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
google-cloud-pubsub = "0.30.0"
tokio-util = { version = "0.7"} # Add this line
futures = "0.3"
google-cloud-googleapis = "0.16.1"
